@@ -4,7 +4,7 @@
 blockmedian \- filter to block average (\fIx,y,z\fP) data by L1 norm.
 .SH SYNOPSIS
 \fBblockmedian\fP [ \fIxyz[w]file(s)\fP ] GMT_I_OPT GMT_Rx_OPT 
-[ OPT(C) ] [ OPT(E) ] [ OPT(F) ] [ GMT_H_OPT ] [ OPT(Q) ] [ OPT(T)\fIquantile\fP ] 
+[ OPT(C) ] [ OPT(E)[\fBb\fP] ] [ OPT(F) ] [ GMT_H_OPT ] [ OPT(Q) ] [ OPT(T)\fIquantile\fP ] 
 [ GMT_V_OPT ] [ OPT(W)[\fBio\fP] ] [ GMT_t_OPT ] [ GMT_b_OPT ] [ GMT_f_OPT ]
 .SH DESCRIPTION
 \fBblockmedian\fP reads arbitrarily located (\fIx,y,z\fP) triples [or optionally weighted
@@ -26,13 +26,15 @@ data values.  [\fIw\fP] is an optional weight for the data.  If no file is speci
 .SH OPTIONS
 .TP
 OPT(C)
-Use the center of the block as the output location [Default uses the median location
-(but see OPT(Q))].  OPT(C) overrides OPT(Q).
+Use the center of the block as the output location [Default uses the median x and
+median y as location (but see OPT(Q))]..
 .TP
 OPT(E)
 Provide Extended report which includes \fBs\fP (the L1 scale of the median),
 \fBl\fP, the lowest value, and \fBh\fP, the high value for each block. Output order
 becomes \fIx,y,z,s,l,h\fP[,\fIw\fP]. [Default outputs \fIx,y,z\fP[,\fIw\fP].
+For box-and-whisker calculation, use OPT(Eb) which will output \fIx,y,z,l,q25,q75,h\fP[,\fIw\fP],
+where \fIq25\fP and \fIq75\fP are the 25% and 75% quantiles, respectively.
 See OPT(W) for \fIw\fP output.
 #include "explain_nodereg.txt"
 Each block is the
@@ -43,8 +45,8 @@ without it 9.5 <= (\fIx,y\fP) < 10.5 is one of 36 blocks.
 Not used with binary data.
 .TP
 OPT(Q)
-(Quicker) Finds median \fIz\fP and (\fIx, y\fP) at that \fIz\fP [Default finds median
-\fIx\fP, median \fIy\fP, median \fIz\fP].
+(Quicker) Finds median \fIz\fP and (\fIx, y\fP) at that the median \fIz\fP [Default finds median
+\fIx\fP, median \fIy\fP independent of \fIz\fP].  Also see OPT(C).
 .TP
 OPT(T)
 Sets the \fIquantile\fP of the distribution to be returned [Default is 0.5 which returns the
@@ -69,6 +71,13 @@ To find 5 by 5 minute block medians from the double precision binary data in haw
 and output an ASCII table, run
 .sp
 \fBblockmedian\fP hawaii_b.xyg OPT(R)198/208/18/25 OPT(I)5\fBm\fP OPT(bi)3 > hawaii_5x5.xyg
+.br
+.sp
+To compute the shape of a data distribution per bin via a box-and-whisker diagram we need the 0%, 25%,
+50%, 75%, and 100% quantiles.  To do so on a global 5 by 5 degree basis from the ASCII table depths.xyz
+and send output to an ASCII table, run
+.sp
+\fBblockmedian\fP depths.xyz OPT(Rg) OPT(I)5 OPT(F) OPT(Eb) > depths_5x5.txt
 .SH "SEE ALSO"
 .IR blockmean (1),
 .IR blockmode (1),
